--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "redux": "^4.2.0",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
+    "swiper": "^9.1.1",
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.3",
