--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,12 +31,15 @@
     "papaparse": "^5.3.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-countdown": "^2.3.5",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
+    "react-visibility-sensor": "^5.1.1",
     "redux": "^4.2.0",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
