--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@mui/material": "^5.11.10",
     "@mui/styles": "^5.11.9",
     "@mui/x-date-pickers": "^5.0.19",
+    "@play-when-visible/framer-motion": "^1.0.5",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -22,14 +23,17 @@
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
     "@walletconnect/web3-provider": "^1.7.8",
+    "animate.css": "^4.1.1",
     "antd": "^5.2.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
+    "framer-motion": "^4.1.17",
     "ipfs-http-client": "^42.0.0",
     "moralis": "^1.8.0",
     "papaparse": "^5.3.2",
     "react": "^18.1.0",
+    "react-animation-on-scroll": "^5.1.0",
     "react-bootstrap": "^2.4.0",
     "react-countdown": "^2.3.5",
     "react-countup": "^6.4.2",
