--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,9 @@ jobs:
     # Runs a single command using the runners shell
 
     - name: Build a basic react app
-      run: yarn build
+      run: |
+            cd frontend
+            yarn build
 
     # Runs a set of commands using the runners shell
     - name: Install Surge
