--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,8 +38,10 @@
     "react-countdown": "^2.3.5",
     "react-countup": "^6.4.2",
     "react-dom": "^18.1.0",
+    "react-grid-gallery": "^1.0.0",
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.3.1",
+    "react-image-lightbox": "^5.1.4",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
