--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^2.28.0",
     "framer-motion": "^4.1.17",
     "ipfs-http-client": "^42.0.0",
+    "lodash": "^4.17.21",
     "moralis": "^1.8.0",
     "papaparse": "^5.3.2",
     "react": "^18.1.0",
@@ -42,6 +43,8 @@
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.3.1",
     "react-image-lightbox": "^5.1.4",
+    "react-lottie": "^1.2.3",
+    "react-marquee-slider": "^1.1.5",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
@@ -59,7 +62,7 @@
     "yup": "^1.0.0"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
