--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     "redux": "^4.2.0",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
+    "surge": "^0.23.1",
     "swiper": "^9.1.1",
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4",
@@ -62,7 +63,7 @@
     "yup": "^1.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
